--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <h2>Credit : <span><a href="https://github.com/vanirvan/fufufafa-quotes-fetcher">https://github.com/vanirvan/fufufafa-quotes-fetcher</a></span></h2>
     <input type="text" id="contentInput" value="">
     <button onclick="fetchData()">Cari Quote</button>
+    <small>*kosongkan input kalau mau liat semua quotenya</small>
     <div id="result">
         <p id="loading" style="color: blue;">Loading...</p>
         <div id="error"></div>
