--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             padding: 10px;
             border: 1px solid #ccc;
             display: none;
-            word-break: break-all
+            word-wrap : break-word;
         }
         .response-item {
             margin-bottom: 10px;
