--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
   <h2>Credit : <span><a href="https://github.com/vanirvan/fufufafa-quotes-fetcher">https://github.com/vanirvan/fufufafa-quotes-fetcher</a></span></h2>
   <input type="text"id="ipt">
    <button onclick="cari()">Cari Quote</button>
+  <br>
+   <small>*kosongin kalo mau liat semua doksli</small>
    <div class="dogsli">
      <p id="quote-list">. . .<p>
    </div>
