--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
 
         .dogsli {
-            max-width: 800px;
+            width: 100%;
             margin: 0 auto;
             background: rgba(255, 255, 255, 0.05);
             padding: 20px;
@@ -118,7 +118,7 @@
         }
 
         .dogsli img {
-            max-width: 100%;
+            width: 100%;
             height: auto;
             border-radius: 10px;
             margin-top: 15px;
@@ -177,7 +177,9 @@
   
    <small>*kosongin kalo mau liat semua doksli</small>
    <div class="dogsli">
-     <div id="quote-list">. . .<div>
+     <div id="quote-list">
+        <b>. . .</b>
+       <div>
      
    </div>
  
