--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             border-radius: 10px;
             margin-top: 15px;
             transition: transform 0.3s ease;
-            margin-top: 30px;
+            margin-top: 60px;
         }
 
         .dogsli img:hover {
@@ -151,7 +151,14 @@
                 flex-direction: column;
                 align-items: center;
             }
-
+.dogsli img {
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-top: 15px;
+  transition: transform 0.3s ease;
+  margin-top: 30px;
+}
             button {
                 width: 100%;
                 max-width: 200px;
